# Ult

./: .env.example  .env.local  .gitignore  .kilocodemodes  .npmrc  .prettierrc  ACCESSIBILITY_IMPROVEMENT_SUMMARY.md  AGENTS.md  APPROVAL_QUICKSTART.md  APPROVAL_WORKFLOW_GUIDE.md  ARCHITECTURE_IMPROVEMENT.md  BACKTEST_CRITICAL_ISSUES_ACTION_PLAN.md  BROKER_INTEGRATION_SUMMARY.md  CHATGPT_CODEX_CONNECTOR_DOCUMENTATION_REVIEW.md  CI_IMPROVEMENT_SUMMARY.md  CLAUDE.md  CLEANUP_EXECUTION_PLAN.md  CODEMAP.md  CODEX_IMPLEMENTATION_SUMMARY.md  CODEX_USAGE_LIMITS_GUIDE.md  CODEX_USAGE_LIMITS_QUICK_GUIDE.md  CODE_REVIEW_SUMMARY.md  COMPOSITE_ANALYSIS_ENGINE_IMPLEMENTATION.md  COMPREHENSIVE_CODE_REVIEW_REPORT.md  CONTRIBUTING.md  DATAQUALITYPANEL_REVIEW.md  DOCUMENTATION_UPDATE_SUMMARY.md  FINAL_IMPLEMENTATION_SUMMARY.md  FINAL_SUMMARY.md  FINAL_VERIFICATION_CHECKLIST.md  FIX_PLAN.md  FIX_SUMMARY.md  FOR-OpenCode.md  GEMINI.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY_ADVANCED_RISK_MANAGEMENT.md  IMPLEMENTATION_SUMMARY_AI_BEHAVIORAL_BIAS.md  IMPLEMENTATION_SUMMARY_PHASE1_DATA_QUALITY.md  IMPLEMENTATION_SUMMARY_TRADING-009.md  ISSUES_TO_CREATE.md  (+216 more)
.Jules/: bolt.md  palette.md
.claude/: settings.json  settings.local.json
.githooks/: pre-commit  setup.sh
.github/: ADMIN_ACTION_REQUIRED.md  CODE_REVIEW_SETUP.md  README.md  copilot-instructions.md  issue-coverage.md  issue-git-size.md  issue-log-files.md  issue-next-build-files.md  issue-node-modules.md  issue-test-files.md  pull_request_template.md
.husky/: pre-commit
.jules/: bolt.md  palette.md  sentinel.md
.opencode/: hooks.json  mcps.json
.qwen/: mcp-servers.json  settings.json
archived-reports/: EPIC_IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_COMPLETE_JAPANESE_MARKET_DATA.md  IMPLEMENTATION_SUMMARY_CODE_DUPLICATION.md  IMPLEMENTATION_SUMMARY_DATA_QUALITY.md  IMPLEMENTATION_SUMMARY_PRED003_PHASE1.md  IMPLEMENTATION_SUMMARY_PSYCHOLOGY.md  IMPLEMENTATION_SUMMARY_REFACTOR-010.md  IMPROVEMENTS_SUMMARY_JP.md  ISSUES_RESOLUTION_SUMMARY.md  NEXT_ARTIFACTS_CLEANUP_REPORT.md  PERFORMANCE_SCREENER_IMPLEMENTATION.md  POSITION_SIZING_IMPLEMENTATION.md  POSITION_SIZING_UI_GUIDE.md  PULL_REQUEST_CRITICAL_ISSUES.md  QUALITY_GATES_IMPLEMENTATION.md  REFACTORING_IMPLEMENTATION_SUMMARY.md  REFACTORING_QUICKSTART.md  REFACTORING_README.md  REFACTORING_SUMMARY.md  REVIEW_REPORT_CURRENT.md  REVIEW_REPORT_SUMMARY.md  REVIEW_REPORT_VERIFICATION.md  RISK_MANAGEMENT_IMPLEMENTATION.md  SECURITY_REVIEW_REPORT.md  SECURITY_SUMMARY_AI_BEHAVIORAL_BIAS.md  SECURITY_SUMMARY_DATA_QUALITY.md  STRATEGY_BACKTEST_PHASE3_SUMMARY.md  SUPPLY_DEMAND_IMPLEMENTATION.md  TEST_COVERAGE_IMPLEMENTATION_SUMMARY.md  TEST_COVERAGE_IMPROVEMENT_SUMMARY.md  TEST_COVERAGE_SUMMARY.md  TOP3_CRITICAL_ISSUES_ACTION_PLAN.md  TRADING-021_IMPLEMENTATION_SUMMARY.md  TRADING-028_IMPLEMENTATION_SUMMARY.md
backend/: .coverage  FULL_CODE_REVIEW.md  OPTIMIZATION_SETUP.md  OPTIMIZATION_SUMMARY.md  README.md  backend_error_log.txt  backend_error_log_v10.txt  backend_error_log_v2.txt  backend_error_log_v3.txt  backend_error_log_v4.txt  backend_error_log_v5.txt  backend_error_log_v6.txt  backend_error_log_v7.txt  backend_error_log_v9.txt  backend_test_log.txt  backend_test_log_v2.txt  backend_test_log_v3.txt  backend_test_log_v4.txt  backend_test_log_v5.txt  backend_test_log_v6.txt  cache.db  config.json  config.yaml  debug_db.py  debug_portfolio.py  debug_signals.py  debug_trade.py  main.py  requirements-ci.txt  (+6 more)
playwright_scraper/: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  __init__.py  config.py  docker-compose.yml  example_usage.py  exceptions.py  pyproject.toml  requirements.txt  scraper.py  yahoo_japan_scraper.py
playwright_scraper/.github/workflows/: ci.yml  release.yml
playwright_scraper/config/: example.json  example.yaml
playwright_scraper/playwright_scraper.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
playwright_scraper/tests/: __init__.py  conftest.py  test_config.py  test_exceptions.py  test_scraper.py  test_yahoo_japan_scraper.py
worktrees/: pyproject.toml
(+4254 files in other folders)
