[tool.poetry]
name = "ult-backend"
version = "0.1.0"
description = "ULT Trading Platform Backend"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.0"
pandas = "^2.0.0"
scikit-learn = "^1.3.0"
tensorflow = "^2.13.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
safety = "^3.0.0"
